--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,6 +38,8 @@
         <activity
             android:name=".ListCats"
             android:exported="false" />
+        <activity android:name=".ListPetsCare" />
+        <activity android:name=".DetailPetCareActivity" />
     </application>
 
 </manifest>
